2010-01-02  Karl Fogel  <kfogel@red-bean.com>

	* bookmark.el (bookmark-bmenu-select, bookmark-bmenu-1-window,
	(bookmark-bmenu-2-window, bookmark-bmenu-this-window)
	(bookmark-bmenu-other-window, bookmark-bmenu-switch-other-window)
	(bookmark-bmenu-show-annotation, bookmark-bmenu-edit-annotation)
	(bookmark-bmenu-rename, bookmark-bmenu-locate)
	(bookmark-bmenu-relocate, bookmark-bmenu-goto-bookmark): Remove
	unnecessary calls to `bookmark-bmenu-ensure-position'.

2010-01-02  Eli Zaretskii  <eliz@gnu.org>

	* emacs-lisp/easy-mmode.el (define-globalized-minor-mode): Make
	the lines in the generated doc string shorter.  (Bug#4668)

2010-01-02  Ryan Yeske  <rcyeske@gmail.com>

	* net/rcirc.el: Add follow-link binding (Bug#4738).

2010-01-02  Eli Zaretskii  <eliz@gnu.org>

	* Makefile.in (bzr-update): Renamed from cvs-update.
	(cvs-update): New target for backward compatibility.

	* makefile.w32-in (bzr-update): Renamed from cvs-update.
	(cvs-update): New target for backward compatibility.

2010-01-02  Karl Fogel  <kfogel@red-bean.com>

	* bookmark.el: Remove gratuitous gratitude.

2010-01-02  Karl Fogel  <kfogel@red-bean.com>

	* bookmark.el (bookmark-bmenu-any-marks): New function
	(bookmark-bmenu-save): Clear buffer modification if no marks.

2010-01-02  Karl Fogel  <kfogel@red-bean.com>

	* bookmark.el (bookmark-bmenu-marks-width): Define to 1, not 2.
	(bookmark-bmenu-list, bookmark-bmenu-bookmark): Calculate property
	positions by using `bookmark-bmenu-marks-width', instead of hardcoding.
	This fixes the `bookmark-bmenu-execute-deletions' bug reported here:

	http://lists.gnu.org/archive/html/emacs-devel/2009-12/msg00819.html
	From: Sun Yijiang <sunyijiang {_AT_} gmail.com>
	To: emacs-devel {_AT_} gnu.org
	Subject: bookmark.el bug report
	Date: Mon, 28 Dec 2009 14:19:16 +0800
	Message-ID: 5065e2900912272219y3734fc9fsdaee41167ef99ad7@mail.gmail.com

2010-01-02  Karl Fogel  <kfogel@red-bean.com>

	* bookmark.el: Improvements suggested by Drew Adams: